Added custom dispatcher and reduced the mapping code.

--- a/conf/common.conf
+++ b/conf/common.conf
@@ -7,6 +7,9 @@ akka {
   remote {
     netty {
       hostname = "10.0.100.255"	#Broadcast IP address of remote system
+      
+	  log-remote-lifecycle-events = on
+      
     }
   }
 }
