removed my secret key.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="Y1oE[1iq8oT=]lKy=wm9ZxbdWjlt^SLLyu6QLZwL;g6RY?vfKRm:o_[Og[H`OkD@"
+application.secret="Your secret Key goes here"
 
 # The application languages
 # ~~~~~
